@@ -18,6 +18,8 @@ Version 1.1.0
 
     Fixed issue #14: enable or disable plugins (Ariya Hidayat).
 
+    Added a new example: using Canvas to produce the color wheel (Ariya Hidayat).
+
 2011-01-17: Version 1.0.0
 
     Initial launch.
